bridge/base/streamlit-app-expose.yaml
#! streamlit-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: streamlit-app
    namespace: proyecto-kor-completo
    labels:
        com.docker.compose.project: proyecto_kor_completo
        com.docker.compose.service: streamlit-app
spec:
    selector:
        com.docker.compose.project: proyecto_kor_completo
        com.docker.compose.service: streamlit-app
    ports:
        - name: streamlit--8501
          port: 8501
          targetPort: streamlit--8501
